--- a/main.css
+++ b/main.css
@@ -7,6 +7,8 @@ body {
     flex: 1 1 200px;
     align-items: center;
     background-repeat: space;
+    text-transform: uppercase;
+    font-size: 20px;
     background-image: url('https://images.unsplash.com/photo-1598515751039-5b58e4f5f6be?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80');
 }
 h2 {
@@ -18,6 +20,5 @@ h2 {
     align-items: flex-end;
     justify-content: right;
     flex: 1 2 10px;
-    border: 2px solid black;
-    
+    border: 2px solid black;  
 }
