--- a/main.css
+++ b/main.css
@@ -4,6 +4,8 @@ body {
 .drum {
     background-position: bottom;
     justify-content: space-around;
+    text-transform: uppercase;
+    font-size: 20px;
     flex: 1 1 200px;
     align-items: center;
     background-repeat: space;
