--- a/main.css
+++ b/main.css
@@ -1,5 +1,9 @@
 body {
     display: flex;
+    font-size: 50px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-decoration: uppercase;
+    color: brown;
 }
 .drum {
     background-position: bottom;
@@ -7,9 +11,7 @@ body {
     flex: 1 1 200px;
     align-items: center;
     background-repeat: space;
-    text-transform: uppercase;
-    font-size: 20px;
-    background-image: url('https://images.unsplash.com/photo-1598515751039-5b58e4f5f6be?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80');
+    background-image: url('https://images.unsplash.com/photo-1598515751039-5b58e4f5f6be?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80');
 }
 h2 {
     font-size: medium;
