--- a/main.css
+++ b/main.css
@@ -1,15 +1,17 @@
 body {
     display: flex;
+    font-size: 50px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-decoration: uppercase;
+    color: brown;
 }
 .drum {
     background-position: bottom;
     justify-content: space-around;
-    text-transform: uppercase;
-    font-size: 20px;
     flex: 1 1 200px;
     align-items: center;
     background-repeat: space;
-    background-image: url('https://images.unsplash.com/photo-1598515751039-5b58e4f5f6be?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80');
+    background-image: url('https://images.unsplash.com/photo-1598515751039-5b58e4f5f6be?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80');
 }
 h2 {
     font-size: medium;
@@ -20,6 +22,5 @@ h2 {
     align-items: flex-end;
     justify-content: right;
     flex: 1 2 10px;
-    border: 2px solid black;
-    
+    border: 2px solid black;  
 }
